# mako-study-monorepo

./: .gitignore  CLAUDE.md  PERSONA_PITCH.md  package-lock.json  package.json
ai-chat-demo/: STREAM_EXPLANATION.md  package-lock.json  package.json
claude-code-demo/: README.md
claude_code_docs/: completion-checklist-haiku4.5-20260326.md  test-cases-detail-haiku4.5-20260326.md  useSearch-implementation-haiku4.5-20260326.md  vitest-quick-reference-haiku4.5-20260326.md  vitest-setup-summary-haiku4.5-20260326.md
cra-demo/: build.js  paths.js  pnpm-lock.yaml  webpack.config.js
langchain-demo/: .gitignore  README.MD  package.json  tsconfig.json
lock-study/: README.MD  package-lock.json  package.json
middleware-use-async-cb/: README.MD  index.js  package.json
next12-react17-demo/: package.json
node-memory-leak/: CLAUDE.md  Heap-20260230-153642-972-0.heapsnapshot  Heap-20260230-153721-972-0.heapsnapshot  README.md  index.ts  package.json
node-module-events/: README.MD  package.json  playground.ts  pnpm-lock.yaml
npm-demo/: a.js  package-lock.json  package.json  pnpm-lock.yaml
openspec-sdd-demo/: README.md
postgresql-demo/: .gitignore  PERFORMANCE_CHEATSHEET.md  PERFORMANCE_REPORT.md  README.md  TESTING_GUIDE.md  advanced-benchmark.js  (+3 more)
rust-demo/: Cargo.toml  GUIDE.md  README.md  README.ts.md  TRANSLATION_SUMMARY.md  package.json  swc_plugin_transform_import.wasm  tsconfig.json
rust-demo/docs/: VISITOR_IN_OUR_CODE.md  VISITOR_PATTERN.md  VISITOR_SIMPLE.md
rust-demo/examples/: usage.ts
rust-demo/src/: lib.ts
rust-demo/tests/: transform.test.ts
(+233 files in other folders)
